<resources>
    <string name="app_name">bUber</string>
    <string name="error_message">Failed to get results. Please, try again.</string>

    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>


    <string name="action_settings">Settings</string>
    <string name="orders">Orders</string>
    <string name="payments">Payments</string>
    <string name="other">Other</string>
    <string name="about_us">About Us</string>
    <string name="sample_login">LateRoad</string>
    <string name="sample_mobile_number">+375(29)969–29–04</string>
    <string name="not_orders_yet">There is no orders yet.</string>
    <string name="sample_driver_login">Galadopter</string>
    <string name="sample_money">BYN 3</string>
    <string name="route_screenshot">Route screenshot</string>
    <string name="sample_date">31/01/1998</string>
    <string name="your_trips">Your Trips</string>
    <string name="payment">Payment</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="add_payment">Add payment</string>
    <string name="card_number">Card Number</string>
    <string name="home">Home</string>
</resources>
